syntax username and dbname

--- a/crePostgres/cre/postgres-add-dbs.sh.tmpl
+++ b/crePostgres/cre/postgres-add-dbs.sh.tmpl
@@ -47,18 +47,18 @@ if [ $(${POSTGRESQL_BIN}/psql -tAc "SELECT 1 FROM pg_database WHERE datname='{{$
 else
  echo "Database missing: {{ $postgresDb }}"
  echo "Creating database: {{ $postgresDb }}"
- ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres -c "CREATE DATABASE {{$postgresDb}}"
+ ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres -c "CREATE DATABASE {{$postgresDb}}"
 fi
 
 #check if user already exists?
 if [ $(${POSTGRESQL_BIN}/psql -tAc "SELECT 1 FROM pg_roles WHERE rolname='$postgres_user'") ]; then
  echo "User exists: $postgres_user"
  echo "Adapt user:  $postgres_user"
- ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres -c "Alter USER $postgres_user WITH ENCRYPTED PASSWORD '$postgres_pwd'"
+ ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres -c "ALTER USER '$postgres_user' WITH ENCRYPTED PASSWORD '$postgres_pwd'"
 else
  echo "User missing: $postgres_user"
  echo "Creating user: $postgres_user"
- ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres -c "CREATE USER $postgres_user WITH ENCRYPTED PASSWORD '$postgres_pwd'"
+ ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres -c "CREATE USER '$postgres_user' WITH ENCRYPTED PASSWORD '$postgres_pwd'"
 fi
 
 ## if init dump file exists import data
@@ -66,7 +66,7 @@ if [ -e /cre/postgres/dumps/{{ $postgresDb }}/database.init.dump ]
 then
    echo "Initialize datebase by file: {{ $postgresDb }}"
    ##${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --single-transaction --username postgres -f /cre/postgres/dumps/{{ $postgresDb }}/database.init.dump 
-   ${POSTGRESQL_BIN}/psql --username postgres -f /cre/postgres/dumps/{{ $postgresDb }}/database.init.dump
+   ${POSTGRESQL_BIN}/psql --username=postgres --dbname={{ $postgresDb }} -f /cre/postgres/dumps/{{ $postgresDb }}/database.init.dump
    # gunzip -c /cre/postgres/{{ $postgresDb }}.init.sql.gz | ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres  
    mv /cre/postgres/dumps/{{ $postgresDb }}/database.init.dump /cre/postgres/dumps/{{ $postgresDb }}/database.done.dump
 fi
@@ -75,21 +75,21 @@ fi
 {{ if $CurrentContainer.Env.POSTGIS_VERSION }}
   {{ $postgisVerson := $CurrentContainer.Env.POSTGIS_VERSION }}
   echo "Upgrade database: {{ $postgresDb }} to PostGIS version: {{ $postgisVerson }}"
-  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres --dbname="{{$postgresDb}}" -c 'CREATE EXTENSION IF NOT EXISTS postgis VERSION "{{ $postgisVerson }}" '
-  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres --dbname="{{$postgresDb}}" -c "ALTER EXTENSION postgis UPDATE TO '{{ $postgisVerson }}' "
+  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres --dbname="{{$postgresDb}}" -c 'CREATE EXTENSION IF NOT EXISTS postgis VERSION "{{ $postgisVerson }}" '
+  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres --dbname="{{$postgresDb}}" -c "ALTER EXTENSION postgis UPDATE TO '{{ $postgisVerson }}' "
 
-  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres --dbname="{{$postgresDb}}" -c 'CREATE EXTENSION IF NOT EXISTS postgis_topology VERSION "{{ $postgisVerson }}" '
-  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres --dbname="{{$postgresDb}}" -c "ALTER EXTENSION postgis_topology UPDATE TO '{{ $postgisVerson }}' "
+  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres --dbname="{{$postgresDb}}" -c 'CREATE EXTENSION IF NOT EXISTS postgis_topology VERSION "{{ $postgisVerson }}" '
+  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres --dbname="{{$postgresDb}}" -c "ALTER EXTENSION postgis_topology UPDATE TO '{{ $postgisVerson }}' "
 
-  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres --dbname="{{$postgresDb}}" -c "CREATE EXTENSION IF NOT EXISTS fuzzystrmatch "
+  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres --dbname="{{$postgresDb}}" -c "CREATE EXTENSION IF NOT EXISTS fuzzystrmatch "
 
-  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres --dbname="{{$postgresDb}}" -c 'CREATE EXTENSION IF NOT EXISTS postgis_tiger_geocoder VERSION "{{ $postgisVerson }}" '
-  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres --dbname="{{$postgresDb}}" -c "ALTER EXTENSION postgis_tiger_geocoder UPDATE TO '{{ $postgisVerson }}' "
+  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres --dbname="{{$postgresDb}}" -c 'CREATE EXTENSION IF NOT EXISTS postgis_tiger_geocoder VERSION "{{ $postgisVerson }}" '
+  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres --dbname="{{$postgresDb}}" -c "ALTER EXTENSION postgis_tiger_geocoder UPDATE TO '{{ $postgisVerson }}' "
 
 {{ end }}
 
 ## grant access for user to table
-${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username postgres -c "GRANT ALL PRIVILEGES ON DATABASE {{$postgresDb}} TO $postgres_user"
+${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres -c "GRANT ALL PRIVILEGES ON DATABASE {{$postgresDb}} TO $postgres_user"
 
 {{ end }} 
 ##end of all containers
