--- a/crePostgres/cre/postgres-add-dbs.sh.tmpl
+++ b/crePostgres/cre/postgres-add-dbs.sh.tmpl
@@ -54,11 +54,11 @@ fi
 if [ $(${POSTGRESQL_BIN}/psql -tAc "SELECT 1 FROM pg_roles WHERE rolname='$postgres_user'") ]; then
  echo "User exists: $postgres_user"
  echo "Adapt user:  $postgres_user"
- ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres -c "ALTER USER '$postgres_user' WITH ENCRYPTED PASSWORD '$postgres_pwd'"
+ ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres -c "ALTER USER \"$postgres_user\" WITH ENCRYPTED PASSWORD '$postgres_pwd'"
 else
  echo "User missing: $postgres_user"
  echo "Creating user: $postgres_user"
- ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres -c "CREATE USER '$postgres_user' WITH ENCRYPTED PASSWORD '$postgres_pwd'"
+ ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres -c "CREATE USER \"$postgres_user\" WITH ENCRYPTED PASSWORD '$postgres_pwd'"
 fi
 
 ## if init dump file exists import data
@@ -89,7 +89,7 @@ fi
 {{ end }}
 
 ## grant access for user to table
-${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres -c "GRANT ALL PRIVILEGES ON DATABASE {{$postgresDb}} TO $postgres_user"
+${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres -c "GRANT ALL PRIVILEGES ON DATABASE {{$postgresDb}} TO \"$postgres_user\" "
 
 {{ end }} 
 ##end of all containers
