Multiple db for postgres

--- a/creNginxPhp/cre/db-config.php.tmpl
+++ b/creNginxPhp/cre/db-config.php.tmpl
@@ -9,7 +9,7 @@
     $port = '{{ $mySqlPort }}';
    {{ range $containerNetwork := $container.Networks }}
     $host = '{{ $containerNetwork.IP }}';
-    $dbName = '{{ $CurrentContainer.Env.MYSQL_DB }}';
+    $dbName = '{{ $CurrentContainer.Env.MYSQL_DB }}';  //todo: handle multiple comma seperated
     {{ if $CurrentContainer.Env.MYSQL_USER }}
     $user = '{{ $CurrentContainer.Env.MYSQL_USER }}';
     {{ else }}
@@ -37,21 +37,24 @@
     $port = '{{ $pgSqlPort }}';
    {{ range $containerNetwork := $container.Networks }}
     $host = '{{ $containerNetwork.IP }}';
-    $dbName = '{{ $CurrentContainer.Env.POSTGRES_DB }}';
-    {{ if $CurrentContainer.Env.POSTGRES_USER }}
-    $user = '{{ $CurrentContainer.Env.POSTGRES_USER }}';
-    {{ else }}
-    $user = substr('U:'.md5($dbName),0,24); 
+    //$dbName = '{{ $CurrentContainer.Env.POSTGRES_DB }}';  //todo: handle multiple comma seperated
+    {{ range $dbNameS := split $CurrentContainer.Env.POSTGRES_DB "," }} 
+      $dbName = '{{ $dbNameS }}';
+      {{ if $CurrentContainer.Env.POSTGRES_USER }}
+      $user = '{{ $CurrentContainer.Env.POSTGRES_USER }}';
+      {{ else }}
+      $user = substr('U:'.md5($dbName),0,24); 
+      {{ end }}
+      {{ if $CurrentContainer.Env.POSTGRES_PWD }}
+      $password = '{{ $CurrentContainer.Env.POSTGRES_PWD }}';
+      {{ else }}
+      $password = substr('PWD:'.md5($user.":".'{{ sha1 $pgsqlServerPWD }}'),0,32); 
+      {{ end }}
+      $dbData['pgsql:'.$dbName] = 
+       ['type' => 'pgsql', 'host' => $host, 'port' => $port, 
+        'dbname' => $dbName, 'user' => $user, 'password' => $password, 
+         'pdo' => "pgsql:host=$host;port=$port;dbname=$dbName;user=$user;password=$password"];
     {{ end }}
-    {{ if $CurrentContainer.Env.POSTGRES_PWD }}
-    $password = '{{ $CurrentContainer.Env.POSTGRES_PWD }}';
-    {{ else }}
-    $password = substr('PWD:'.md5($user.":".'{{ sha1 $pgsqlServerPWD }}'),0,32); 
-    {{ end }}
-    $dbData['pgsql:'.$dbName] = 
-     ['type' => 'pgsql', 'host' => $host, 'port' => $port, 
-      'dbname' => $dbName, 'user' => $user, 'password' => $password, 
-       'pdo' => "pgsql:host=$host;port=$port;dbname=$dbName;user=$user;password=$password"];
    {{ end }}
   {{ end }} 
  {{ end }} 
