--- a/crePostgres/cre/postgres-add-dbs.sh.tmpl
+++ b/crePostgres/cre/postgres-add-dbs.sh.tmpl
@@ -88,13 +88,18 @@ fi
 
 {{ end }}
 
-## grant access for user to table
+## grant access for user to db
 ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres -c "GRANT ALL PRIVILEGES ON DATABASE {{$postgresDb}} TO \"$postgres_user\" "
 
-## MISSING!!
-## GRANT USAGE ON SCHEMA locating TO user
-## GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA locating TO user
-## GRANT ALL PRIVILEGES ON ALL SEQUENCES IN SCHEMA locating TO user
+## handle all schemes in db
+pg_schemes=$(${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres --dbname={{$postgresDb}} -c "\dn")
+postgres_schemes=$(echo "$pg_schemes" | head -n -2 | tail -n +4 | | cut -d '|' -f 1 | tr -d ' ')
+echo "postgres_schemes" | while read -r scheme; do
+  echo "Adapt privileges for scheme $scheme in database {{ $postgresDb }}" 
+  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres --dbname="{{$postgresDb}}" -c "GRANT USAGE ON SCHEMA $scheme TO \"$postgres_user\" "
+  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres --dbname="{{$postgresDb}}" -c "ALL PRIVILEGES ON ALL TABLES IN SCHEMA $scheme TO \"$postgres_user\" "
+  ${POSTGRESQL_BIN}/psql -v ON_ERROR_STOP=1 --username=postgres --dbname="{{$postgresDb}}" -c "GRANT ALL PRIVILEGES ON ALL SEQUENCES IN SCHEMA $scheme TO \"$postgres_user\" "
+done
 
 {{ end }} 
 ##end of all containers
