--- a/creNginxPhp/cre/nginx-php.conf.tmpl
+++ b/creNginxPhp/cre/nginx-php.conf.tmpl
@@ -65,6 +65,8 @@ server {
         add_header X-Download-Options noopen;
         add_header X-Permitted-Cross-Domain-Policies none;
 
+        include /etc/nginx/conf.d/*.conf.redirect
+
         location = /robots.txt {
             allow all;
             log_not_found off;
