--- a/creMail/cre/main.cf.tmpl
+++ b/creMail/cre/main.cf.tmpl
@@ -4,7 +4,7 @@
 {{ $mailIp := $CurrentContainer.Name }}
 {{ range $containerNetwork := $CurrentContainer.Networks }}
   {{ $mailIp := $containerNetwork.IP }}
-}}
+{{ end }}
 {{ $mailDomain := "example.com" }}
 {{ range $oneDomain, $containers := groupByMulti $ "Env.CRE_DOMAIN" "," }}
   {{ $mailDomain := $oneDomain }}
@@ -17,7 +17,7 @@ mydestination = $myhostname, {{ $CurrentContainer.Name }}, localhost.localdomain
 #mynetworks_style = subnet
 #mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
 
-
+#relay_domains = $mydestination
 
 
 
