--- a/crePhp/cre/ssmtp.conf.sh.tmpl
+++ b/crePhp/cre/ssmtp.conf.sh.tmpl
@@ -7,15 +7,35 @@
   {{ $domain = $creDomain }}
 {{ end }} 
 
+{{ $mailhub = or $CurrentContainer.Env.MAIL_HUB (printf "mail.%s" $domain)}}
+{{ $authuser = or $CurrentContainer.Env.MAIL_USER ""}}
+{{ $authpass = or $CurrentContainer.Env.MAIL_PWD ""}}
+
+#root=postmaster
 echo "FromLineOverride=YES" > /etc/ssmtp/ssmtp.conf
-echo "mailhub=mail.{{ $domain }}:587" >> /etc/ssmtp/ssmtp.conf
-echo "hostname={{ $domain }}" >> /etc/ssmtp/ssmtp.conf
+
+##Bei creMail:
+##echo "mailhub=mail.{{ $domain }}:587" >> /etc/ssmtp/ssmtp.conf
+##echo "hostname={{ $domain }}" >> /etc/ssmtp/ssmtp.conf
+
+## Use external mailhub
+echo "mailhub={{ $mailhub }}" >> /etc/ssmtp/ssmtp.conf 
+echo "hostname={{ $domain }}" >> /etc/ssmtp/ssmtp.conf 
+{{ if (and (ne $authuser "") (ne $authpass "")) }}
+ echo "AuthUser={{ $authuser }}" >> /etc/ssmtp/ssmtp.conf  
+ echo "AuthPass={{ $authpass }}" >> /etc/ssmtp/ssmtp.conf 
+ #AuthMethod=LOGIN
+{{ end }}
+echo "AuthMethod=cram-md5" >> /etc/ssmtp/ssmtp.conf
+
 echo "UseTLS=YES" >> /etc/ssmtp/ssmtp.conf
 echo "UseSTARTTLS=YES" >> /etc/ssmtp/ssmtp.conf
+echo "rewriteDomain={{ $domain }}" >> /etc/ssmtp/ssmtp.conf
+
 
 # https://blog.doenselmann.com/emails-automatisch-mit-ssmtp-versenden/
 # /etc/ssmtp/revaliases
 # root:alerts@yourdomain.com:smtp.yourdomain.com:587
 # username:alerts@yourdomain.com:smtp.yourdomain.com:587
-
+# https://wiki.archlinux.org/index.php/SSMTP   -> i.e. GMAIL
 
