--- a/crePhp/cre/ssmtp.conf.sh.tmpl
+++ b/crePhp/cre/ssmtp.conf.sh.tmpl
@@ -28,10 +28,12 @@ echo "FromLineOverride=YES" > /etc/ssmtp/ssmtp.conf;
 ## Use external mailhub
 echo "mailhub=$mailhub" >> /etc/ssmtp/ssmtp.conf 
 echo "hostname=$domain2" >> /etc/ssmtp/ssmtp.conf 
-{{ if (and (ne $authuser "") (ne $authpass "")) }}
+{{ if (and (ne $authuserfile "") (ne $authpassfile "")) }}
+if [ ! -z $authuser ] && [ ! -z $authpass ]; then
  echo "AuthUser=$authuser" >> /etc/ssmtp/ssmtp.conf  
  echo "AuthPass=$authpass" >> /etc/ssmtp/ssmtp.conf 
  #AuthMethod=LOGIN
+fi
 {{ end }}
 echo "AuthMethod=cram-md5" >> /etc/ssmtp/ssmtp.conf
 
