--- a/crePhp/cre/ssmtp.conf.sh.tmpl
+++ b/crePhp/cre/ssmtp.conf.sh.tmpl
@@ -29,10 +29,12 @@ echo 'FromLineOverride=YES' > /etc/ssmtp/ssmtp.conf;
 echo 'mailhub='$mailhub >> /etc/ssmtp/ssmtp.conf 
 echo 'hostname='$domain2 >> /etc/ssmtp/ssmtp.conf 
 {{ if (and (ne $authuserfile "") (ne $authpassfile "")) }}
-if [[ ! -z $authuser ] && [ ! -z $authpass ]]; then
- echo 'AuthUser='$authuser >> /etc/ssmtp/ssmtp.conf  
- echo 'AuthPass='$authpass >> /etc/ssmtp/ssmtp.conf 
- #AuthMethod=LOGIN
+if [ ! -z $authuser ]; then
+ if [ ! -z $authpass ]; then
+  echo 'AuthUser='$authuser >> /etc/ssmtp/ssmtp.conf  
+  echo 'AuthPass='$authpass >> /etc/ssmtp/ssmtp.conf 
+  #AuthMethod=LOGIN
+ fi
 fi
 {{ end }}
 echo 'AuthMethod=cram-md5' >> /etc/ssmtp/ssmtp.conf
