--- a/crePostgres/cre/postgres-add-dbs.sh.tmpl
+++ b/crePostgres/cre/postgres-add-dbs.sh.tmpl
@@ -42,8 +42,10 @@ postgres_pwd="${postgres_pwd:0:32}"
 {{ end }}
 
 #check if database already exists?
+dataBaseExists='false'
 if [ $(${POSTGRESQL_BIN}/psql -tAc "SELECT 1 FROM pg_database WHERE datname='{{$postgresDb}}'") ]; then
  echo "Database exists: {{ $postgresDb }}"
+ dataBaseExists='true'
 else
  echo "Database missing: {{ $postgresDb }}"
  echo "Creating database: {{ $postgresDb }}"
@@ -70,7 +72,7 @@ if [ -e /cre/postgres/dumps/{{ $postgresDb }}/database.init.dump ]
 then
 
    #check if database already exists?
-   if [ $(${POSTGRESQL_BIN}/psql -tAc "SELECT 1 FROM pg_database WHERE datname='{{$postgresDb}}'") ]; then
+   if [ "true" == "$dataBaseExists" ]; then
       echo "Backup existing database: {{ $postgresDb }}"
       if [ -e /cre/postgres/dumps/{{ $postgresDb }}/database.daily.dump.zip ]
       then
