--- a/creJupyter/cre/jupyterhub_config.py.tmpl
+++ b/creJupyter/cre/jupyterhub_config.py.tmpl
@@ -97,7 +97,7 @@
 #  This is the address on which the proxy will bind. Sets protocol, ip, base_url
 #c.JupyterHub.bind_url = 'http://:8000'
 #c.JupyterHub.bind_url = '127.0.0.1:8000'
-c.JupyterHub.bind_url = '{{ $CurrentIP }}:8000'
+c.JupyterHub.bind_url = 'http://:{{ $CurrentIP }}:8000'
 
 ## Whether to shutdown the proxy when the Hub shuts down.
 #  
@@ -224,6 +224,9 @@ c.JupyterHub.bind_url = '{{ $CurrentIP }}:8000'
 #  
 #  .. versionadded:: 0.8
 #c.JupyterHub.hub_connect_ip = ''
+#c.JupyterHub.hub_connect_ip = 'crejupyter'
+#c.JupyterHub.hub_connect_ip = 'cre-jupyter'
+c.JupyterHub.hub_connect_ip = '{{ $CurrentIP }}'
 
 ## DEPRECATED
 #  
@@ -247,6 +250,8 @@ c.JupyterHub.bind_url = '{{ $CurrentIP }}:8000'
 #  
 #  .. versionadded:: 0.9
 #c.JupyterHub.hub_connect_url = ''
+#c.JupyterHub.hub_connect_url = '127.0.0.1:8000'
+#c.JupyterHub.hub_connect_url = '{{ $CurrentIP }}:8000'
 
 ## The ip address for the Hub process to *bind* to.
 #  
@@ -258,6 +263,7 @@ c.JupyterHub.bind_url = '{{ $CurrentIP }}:8000'
 #  See `hub_connect_ip` for cases where the bind and connect address should
 #  differ, or `hub_bind_url` for setting the full bind URL.
 #c.JupyterHub.hub_ip = '127.0.0.1'
+c.JupyterHub.hub_ip = '0.0.0.0'
 
 ## The internal port for the Hub process.
 #  
