--- a/creJupyter/cre/jupyterhub_config.py.tmpl
+++ b/creJupyter/cre/jupyterhub_config.py.tmpl
@@ -96,7 +96,7 @@
 #  
 #  This is the address on which the proxy will bind. Sets protocol, ip, base_url
 #c.JupyterHub.bind_url = 'http://:8000'
-c.JupyterHub.bind_url = 'http://127.0.0.1:8000'
+#c.JupyterHub.bind_url = 'http://127.0.0.1:8000'
 #c.JupyterHub.bind_url = 'http://:{{ $CurrentIP }}:8000'
 
 ## Whether to shutdown the proxy when the Hub shuts down.
