--- a/creJupyter/cre/jupyterhub_config.py.tmpl
+++ b/creJupyter/cre/jupyterhub_config.py.tmpl
@@ -97,7 +97,7 @@
 #  This is the address on which the proxy will bind. Sets protocol, ip, base_url
 #c.JupyterHub.bind_url = 'http://:8000'
 #c.JupyterHub.bind_url = 'http://127.0.0.1:8000'
-#c.JupyterHub.bind_url = 'http://:{{ $CurrentIP }}:8000'
+c.JupyterHub.bind_url = 'http://{{ $CurrentIP }}:8000'
 
 ## Whether to shutdown the proxy when the Hub shuts down.
 #  
@@ -209,6 +209,8 @@
 #  
 #  .. versionadded:: 0.9
 #c.JupyterHub.hub_bind_url = ''
+#c.JupyterHub.hub_bind_url = '{{ $CurrentIP }}:8081'
+
 
 ## The ip or hostname for proxies and spawners to use for connecting to the Hub.
 #  
@@ -226,7 +228,7 @@
 #c.JupyterHub.hub_connect_ip = ''
 #c.JupyterHub.hub_connect_ip = 'crejupyter'
 #c.JupyterHub.hub_connect_ip = 'cre-jupyter'
-c.JupyterHub.hub_connect_ip = '{{ $CurrentIP }}'
+#c.JupyterHub.hub_connect_ip = '{{ $CurrentIP }}'
 
 ## DEPRECATED
 #  
@@ -263,7 +265,7 @@ c.JupyterHub.hub_connect_ip = '{{ $CurrentIP }}'
 #  See `hub_connect_ip` for cases where the bind and connect address should
 #  differ, or `hub_bind_url` for setting the full bind URL.
 #c.JupyterHub.hub_ip = '127.0.0.1'
-c.JupyterHub.hub_ip = '0.0.0.0'
+#c.JupyterHub.hub_ip = '0.0.0.0'
 
 ## The internal port for the Hub process.
 #  
@@ -286,7 +288,7 @@ c.JupyterHub.hub_ip = '0.0.0.0'
 #      Use JupyterHub.bind_url
 #c.JupyterHub.ip = ''
 #c.JupyterHub.ip = '127.0.0.1'
-#c.JupyterHub.ip = '{{ $CurrentIP }}'
+c.JupyterHub.ip = '{{ $CurrentIP }}'
 
 ## Supply extra arguments that will be passed to Jinja environment.
 #c.JupyterHub.jinja_environment_options = {}
@@ -316,7 +318,7 @@ c.JupyterHub.hub_ip = '0.0.0.0'
 #  
 #  .. deprecated: 0.9
 #      Use JupyterHub.bind_url
-#c.JupyterHub.port = 8000
+c.JupyterHub.port = 8000
 
 ## DEPRECATED since version 0.8 : Use ConfigurableHTTPProxy.api_url
 #c.JupyterHub.proxy_api_ip = ''
