--- a/creJupyter/cre/jupyterhub_config.py.tmpl
+++ b/creJupyter/cre/jupyterhub_config.py.tmpl
@@ -228,7 +228,7 @@ c.JupyterHub.bind_url = 'http://{{ $CurrentIP }}:8000'
 #c.JupyterHub.hub_connect_ip = ''
 #c.JupyterHub.hub_connect_ip = 'crejupyter'
 #c.JupyterHub.hub_connect_ip = 'cre-jupyter'
-#c.JupyterHub.hub_connect_ip = '{{ $CurrentIP }}'
+c.JupyterHub.hub_connect_ip = '{{ $CurrentIP }}'
 
 ## DEPRECATED
 #  
@@ -266,6 +266,7 @@ c.JupyterHub.bind_url = 'http://{{ $CurrentIP }}:8000'
 #  differ, or `hub_bind_url` for setting the full bind URL.
 #c.JupyterHub.hub_ip = '127.0.0.1'
 #c.JupyterHub.hub_ip = '0.0.0.0'
+#c.JupyterHub.hub_ip = '{{ $CurrentIP }}'
 
 ## The internal port for the Hub process.
 #  
