--- a/creJupyter/cre/jupyterhub_config.py.tmpl
+++ b/creJupyter/cre/jupyterhub_config.py.tmpl
@@ -265,7 +265,7 @@ c.JupyterHub.hub_connect_ip = '{{ $CurrentIP }}'
 #  differ, or `hub_bind_url` for setting the full bind URL.
 #c.JupyterHub.hub_ip = '127.0.0.1'
 #c.JupyterHub.hub_ip = '0.0.0.0'
-#c.JupyterHub.hub_ip = '{{ $CurrentIP }}'
+c.JupyterHub.hub_ip = '{{ $CurrentIP }}'
 
 ## The internal port for the Hub process.
 #  
