--- a/creJupyter/cre/jupyterhub_config.py.tmpl
+++ b/creJupyter/cre/jupyterhub_config.py.tmpl
@@ -208,7 +208,7 @@ c.JupyterHub.bind_url = 'http://{{ $CurrentIP }}:8000'
 #  
 #  .. versionadded:: 0.9
 #c.JupyterHub.hub_bind_url = ''
-#c.JupyterHub.hub_bind_url = '{{ $CurrentIP }}:8081'
+c.JupyterHub.hub_bind_url = '{{ $CurrentIP }}:8081'
 
 
 ## The ip or hostname for proxies and spawners to use for connecting to the Hub.
@@ -252,7 +252,7 @@ c.JupyterHub.hub_connect_ip = '{{ $CurrentIP }}'
 #  .. versionadded:: 0.9
 #c.JupyterHub.hub_connect_url = ''
 #c.JupyterHub.hub_connect_url = '127.0.0.1:8000'
-#c.JupyterHub.hub_connect_url = '{{ $CurrentIP }}:8000'
+c.JupyterHub.hub_connect_url = '{{ $CurrentIP }}:8081'
 
 ## The ip address for the Hub process to *bind* to.
 #  
