mv liquibase to ressources

--- a/creSpring/cre/application.properties.tmpl
+++ b/creSpring/cre/application.properties.tmpl
@@ -12,7 +12,7 @@ spring.thymeleaf.cache=false
 # spring.jpa.hibernate.show-sql=true
 
 #Liquibase 
-spring.liquibase.change-log=classpath:liquibase/changelog.xml
+spring.liquibase.change-log=classpath:/liquibase/changelog.xml
 spring.liquibase.enabled=true
 
 # add postgres data
